# catena-r1

./: .travis.yml  README.md  catena.cabal
src/: Catena.hs
src/Catena/: Evaluator.hs  Parser.hs  REPL.hs  Stdlib.hs
test/Catena/: EvaluatorSpec.hs  ParserSpec.hs  StdlibSpec.hs
