name:                  catena
version:               0.0.1
author:                Utkarsh Kukreti

build-type:            Simple
cabal-version:         >= 1.8

Library
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:
      base == 4.*
    , map
    , attoparsec

test-suite spec
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src, test
  build-depends:
      base == 4.*
    , hspec >= 1.3
