name:                  catena
version:               0.0.1
author:                Utkarsh Kukreti

build-type:            Simple
cabal-version:         >= 1.8

Library
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:
      base == 4.*
    , containers
    , attoparsec >= 0.10.4.0

Executable catena
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Catena/REPL.hs
  build-depends:
      base == 4.*
    , containers
    , attoparsec >= 0.10.4.0

test-suite spec
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      src, test
  build-depends:
      base == 4.*
    , containers
    , attoparsec >= 0.10.4.0
    , hspec >= 1.3
